--- a/SportsStore/Views/Shared/_Layout.cshtml
+++ b/SportsStore/Views/Shared/_Layout.cshtml
@@ -3,20 +3,26 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="~/vendor/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css" />
     <title>SportsStore</title>
 </head>
 <body>
-    <div class="navbar navbar-inverse bg-inverse" role="navigation">
-        <a class="navbar-brand" href="#">SPORTS STORE</a>
-    </div>
-    <div class="row m-1 p-1">
-        <div id="categories" class="col-3">
-            @await  Component.InvokeAsync("NavigationMenu")
+        <div class="navbar navbar-inverse bg-inverse" role="navigation">
+            <div class="row">
+                <a class="col navbar-brand" href="#">SPORTS STORE</a>
+                <div class="col-4 text-right">
+                    @await Component.InvokeAsync("CartSummary")
+                </div>
+            </div>
         </div>
-        <div class="col-9">
-            @RenderBody()
+        <div class="row m-1 p-1">
+            <div id="categories" class="col-3">
+                @await Component.InvokeAsync("NavigationMenu")
+            </div>
+            <div class="col-9">
+                @RenderBody()
+            </div>
         </div>
-    </div>
 </body>
 </html>
